Fix wrapping for smaller screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,5 +15,7 @@ body {
 
 .scoreboard {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 1rem;
 }
